added comments throughout logic

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,15 @@
     border-radius: 10px;
 }
 
+.hide {
+    display:none;
+}
+
+.invalid-search {
+    border: solid red;
+    display: block;
+}
+
 /* Always set the map height explicitly to define the size of the div element that contains the map. */
 #map {
     height: 50%;
