--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,10 +54,11 @@
     border-radius: 3px;
     border-style: solid;
     border-width: 1px;
-    padding: 5px 0;
+    padding: 5px;
     font-weight: bold;
     font-size: 24px;
     margin-top: 5px;
+    text-align: left;
 }
 
 .itinerary {
