--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,10 +54,11 @@
     border-radius: 3px;
     border-style: solid;
     border-width: 1px;
-    padding: 5px 0;
+    padding: 5px;
     font-weight: bold;
     font-size: 24px;
     margin-top: 5px;
+    text-align: left;
 }
 
 .itinerary {
@@ -68,10 +69,28 @@
     border-radius: 10px;
 }
 
+.hide {
+    display:none;
+}
+
+.invalid-search {
+    border: solid red;
+    display: block;
+}
+
 /* Always set the map height explicitly to define the size of the div element that contains the map. */
 #map {
-    height: 50%;
-    width: 50%;
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+/* Optional: Makes the sample page fill the window. */
+html,
+body,
+main {
+    height: 100%;
     padding: 0;
     margin: 0;
 }
