--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,7 @@ main {
 
 main {
     background-color: #f6e58d;
+    height: auto;
 }
 
 .button {
@@ -108,4 +109,11 @@ main {
     color: white;
     font-weight: 400;
     font-size: 20px;
+}
+
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 1023px) {
+    #map {
+        height: 400px;
+    }
 }
