Feature/develop ready (#44)
* added code to delete old buttons when searching again

* updated code to delete old buttons

* added skeleton html and basic css

* Adding new mockup to develop branch (#22)

* Feature/base code (#5)

* added code to delete old buttons when searching again

* updated code to delete old buttons

* updated html to new mock-up

Co-authored-by: reynolkb <57142369+reynolkb@users.noreply.github.com>

* adding in api logic with geocoding, trip advisor and google maps

* Feature/pseudo code (#26)

* Feature/base code (#5)

* added code to delete old buttons when searching again

* updated code to delete old buttons

* Updated html to new mockup (#20)

* added code to delete old buttons when searching again

* updated code to delete old buttons

* added skeleton html and basic css

* updated html to new mock-up

Co-authored-by: Kyle Reynolds <kyle.reynolds9146@gmail.com>
Co-authored-by: ginomaglaqueucla <68166953+ginomaglaqueucla@users.noreply.github.com>

* adding in api logic with geocoding, trip advisor and google maps (#23)

* Implemented pseudo code

Co-authored-by: reynolkb <57142369+reynolkb@users.noreply.github.com>
Co-authored-by: plainjane99 <69064501+plainjane99@users.noreply.github.com>
Co-authored-by: Kyle Reynolds <kyle.reynolds9146@gmail.com>

* updating html

* accepted incoming change

* Created getUserInput function and establish object data structure for entire project

* updated city function to use object data structure

* updated restaurants function to use object data structure

* updated attractions function to use object data structure

* updated create map function to use object data structure

* put error handling in getUserInput function

* grabbed city user input, updated all functions to use object data structure

* added comments throughout logic

* added error handling

* Feature/user input (#28)

* Develop (#27)

* added code to delete old

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 :root {
-    --background-color: grey;
+    --background-color: #ffbe76;
     --background-text: white;
     --border-color: black;
 }
@@ -9,6 +9,7 @@
     color: var(--background-text);
     display: flex;
     justify-content: center;
+    margin-bottom: 10px;
 }
 
 .title {
@@ -16,7 +17,6 @@
 }
 
 .container {
-    margin-top: 5px;
     margin-left: 10px;
     margin-right: 10px;
 }
@@ -49,15 +49,16 @@
 
 .event {
     width: 100%;
-    background-color: var(--background-color);
+    background-color: #30336b;
     color: var(--background-text);
     border-radius: 3px;
     border-style: solid;
     border-width: 1px;
-    padding: 5px 0;
+    padding: 5px;
     font-weight: bold;
     font-size: 24px;
     margin-top: 5px;
+    text-align: left;
 }
 
 .itinerary {
@@ -68,10 +69,19 @@
     border-radius: 10px;
 }
 
+.hide {
+    display:none;
+}
+
+.invalid-search {
+    border: solid red;
+    display: block;
+}
+
 /* Always set the map height explicitly to define the size of the div element that contains the map. */
 #map {
-    height: 50%;
-    width: 50%;
+    height: 100%;
+    width: 100%;
     padding: 0;
     margin: 0;
 }
@@ -83,4 +93,19 @@ main {
     height: 100%;
     padding: 0;
     margin: 0;
+}
+
+main {
+    background-color: #f6e58d;
+}
+
+.button {
+    background-color: #30336b;
+}
+
+#itinerary-title {
+    background-color: #ffbe76;
+    color: white;
+    font-weight: 400;
+    font-size: 20px;
 }
