--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,10 @@
-
 :root {
     --background-color: #ffbe76;
     --background-text: white;
     --border-color: black;
+    --inner-color: #F8F8FF;
+    --button-color: #30336b;
+    --hover-color: #6495ED;
 }
 
 .hero {
@@ -15,6 +17,7 @@
 
 .title {
     margin-top: 5px;
+    font-weight: bold;
 }
 
 .container {
@@ -34,13 +37,18 @@
 }
 
 .search-button {
-    background-color: #33BDFF;
+    background-color: var(--button-color);
     color: var(--background-text);
     border-radius: 3px;
     border-style: solid;
+    border-width: 1px;
     padding: 5px;
     font-size: 20px;
     margin-left: -4px;
+}
+
+.search-button:hover {
+    background-color: var(--hover-color);
 }
 
 .saved-itinerary {
@@ -77,6 +85,31 @@
 .invalid-search {
     border: solid red;
     display: block;
+    padding: 0;
+    margin: 0;
+    background-color: red;
+    color: white;
+}
+
+#clear-cities {
+    background-color: var(--button-color);
+    color: var(--background-text);
+    border-radius: 3px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    padding: 5px;
+    font-size: 30px;
+    margin-left: -4px;
+}
+
+#clear-cities:hover {
+    background-color: var(--hover-color);
+}
+
+#food-filter,
+#event-filter {
+    background-color: var(--inner-color);
 }
 
 /* Always set the map height explicitly to define the size of the div element that contains the map. */
@@ -85,6 +118,7 @@
     width: 100%;
     padding: 0;
     margin: 0;
+    border-radius: 5px;
 }
 
 /* Optional: Makes the sample page fill the window. */
@@ -99,10 +133,16 @@ main {
 main {
     background-color: #f6e58d;
     height: auto;
+    min-height: 100vh;
 }
 
 .button {
-    background-color: #30336b;
+    background-color: var(--button-color);
+    border-radius: 5px;
+}
+
+#itinerary-list {
+    background-color: var(--inner-color);
 }
 
 #itinerary-title {
