--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* General styling */
 :root {
     --background-color: #ffbe76;
     --background-text: white;
@@ -7,121 +8,6 @@
     --hover-color: #6495ED;
 }
 
-.hero {
-    background-color: var(--background-color);
-    color: var(--background-text);
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10px;
-}
-
-.title {
-    margin-top: 5px;
-    font-weight: bold;
-}
-
-.container {
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-.search-form label {
-    font-weight: bold;
-    font-size: 20px;
-}
-
-.city-input {
-    margin: 5px 0;
-    font-size: 18px;
-    padding: 5px;
-}
-
-.search-button {
-    background-color: var(--button-color);
-    color: var(--background-text);
-    border-radius: 3px;
-    border-style: solid;
-    border-width: 1px;
-    padding: 5px;
-    font-size: 20px;
-    margin-left: -4px;
-}
-
-.search-button:hover {
-    background-color: var(--hover-color);
-}
-
-.saved-itinerary {
-    margin-left: 0;
-    margin-top: 5px;
-}
-
-.event {
-    width: 100%;
-    background-color: #30336b;
-    color: var(--background-text);
-    border-radius: 3px;
-    border-style: solid;
-    border-width: 1px;
-    padding: 5px;
-    font-weight: bold;
-    font-size: 24px;
-    margin-top: 5px;
-    text-align: left;
-}
-
-.itinerary {
-    border-radius: 10px; 
-}
-
-.map-area {
-    border-radius: 10px;
-}
-
-.hide {
-    display:none;
-}
-
-.invalid-search {
-    border: solid red;
-    display: block;
-    padding: 0;
-    margin: 0;
-    background-color: red;
-    color: white;
-}
-
-#clear-cities {
-    background-color: var(--button-color);
-    color: var(--background-text);
-    border-radius: 3px;
-    border-style: solid;
-    border-width: 1px;
-    border-color: black;
-    padding: 5px;
-    font-size: 30px;
-    margin-left: -4px;
-}
-
-#clear-cities:hover {
-    background-color: var(--hover-color);
-}
-
-#food-filter,
-#event-filter {
-    background-color: var(--inner-color);
-}
-
-/* Always set the map height explicitly to define the size of the div element that contains the map. */
-#map {
-    height: 100%;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    border-radius: 5px;
-}
-
-/* Optional: Makes the sample page fill the window. */
 html,
 body,
 main {
@@ -141,6 +27,107 @@ main {
     border-radius: 5px;
 }
 
+/* Header styling */
+.hero {
+    background-color: var(--background-color);
+    color: var(--background-text);
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+}
+
+.title {
+    margin-top: 5px;
+    font-weight: bold;
+}
+
+/* Main container */
+.container {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+/* error styling */
+.hide {
+    display:none;
+}
+
+.invalid-search {
+    border: solid red;
+    display: block;
+    padding: 0;
+    margin: 0;
+    background-color: red;
+    color: white;
+}
+
+.invalid-filter-input {
+    border: solid orange;
+    display: block;
+    padding: 0;
+    margin: 0;
+    background-color: orange;
+    color: white;
+}
+
+/* search button and input */
+.city-input {
+    margin: 5px 10px 5px 0;
+    font-size: 18px;
+    padding: 5px;
+}
+
+.search-button {
+    background-color: var(--button-color);
+    color: var(--background-text);
+    border-radius: 3px;
+    border-style: solid;
+    border-width: 1px;
+    padding: 5px;
+    font-size: 20px;
+    margin-left: -4px;
+}
+
+.search-button:hover {
+    background-color: var(--hover-color);
+}
+
+/* Styling for pull down filters */
+.search-form label {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+#food-filter,
+#event-filter {
+    background-color: var(--inner-color);
+}
+
+/* Search history */
+.saved-itinerary {
+    margin-left: 0;
+    margin-top: 5px;
+}
+
+/* Itinerary formatting */
+.event {
+    width: 100%;
+    background-color: #30336b;
+    color: var(--background-text);
+    border-radius: 3px;
+    border-style: solid;
+    border-width: 1px;
+    padding: 5px;
+    font-weight: bold;
+    font-size: 24px;
+    margin-top: 5px;
+    text-align: left;
+}
+
+.itinerary {
+    border-radius: 10px; 
+}
+
 #itinerary-list {
     background-color: var(--inner-color);
 }
@@ -150,6 +137,35 @@ main {
     color: white;
     font-weight: 400;
     font-size: 20px;
+}
+
+/* Map styling */
+.map-area {
+    border-radius: 10px;
+}
+
+#map {
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    border-radius: 5px;
+}
+
+#clear-cities {
+    background-color: var(--button-color);
+    color: var(--background-text);
+    border-radius: 3px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    padding: 5px;
+    font-size: 30px;
+    margin-left: 5px;
+}
+
+#clear-cities:hover {
+    background-color: var(--hover-color);
 }
 
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
